Bug #22263
client reconnect gather race
0%
Description
#0 raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
#1 0x0000555555ae8bde in reraise_fatal (signum=6) at /home/zhyan/Ceph/ceph-2/src/global/signal_handler.cc:74
#2 handle_fatal_signal (signum=6) at /home/zhyan/Ceph/ceph-2/src/global/signal_handler.cc:138
#3 <signal handler called>
#4 GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
#5 0x00007ffff5066800 in _GI_abort () at abort.c:89
#6 0x0000555555b335ce in ceph::_ceph_assert_fail (assertion=assertion@entry=0x555555f5496c "reconnect_done", file=file@entry=0x555555f61ea8 "/home/zhyan/Ceph/ceph-2/src/mds/Server.cc",
line=line@entry=1003, func=func@entry=0x555555f60a40 <Server::reconnect_gather_finish()::__PRETTY_FUNCTION> "void Server::reconnect_gather_finish()")
at /home/zhyan/Ceph/ceph-2/src/common/assert.cc:66
#7 0x00005555557fc5ff in Server::reconnect_gather_finish (this=this@entry=0x55555ef0c8c0) at /home/zhyan/Ceph/ceph-2/src/mds/Server.cc:1003
#8 0x000055555584d0cf in Server::handle_client_reconnect (this=0x55555ef0c8c0, m=<optimized out>) at /home/zhyan/Ceph/ceph-2/src/mds/Server.cc:993
#9 0x000055555584eded in Server::dispatch (this=0x55555ef0c8c0, m=m@entry=0x5555606e2b40) at /home/zhyan/Ceph/ceph-2/src/mds/Server.cc:198
#10 0x00005555557b6b75 in MDSRank::handle_deferrable_message (this=this@entry=0x55555f04a000, m=m@entry=0x5555606e2b40) at /home/zhyan/Ceph/ceph-2/src/mds/MDSRank.cc:709
#11 0x00005555557c532b in MDSRank::_dispatch (this=this@entry=0x55555f04a000, m=0x5555606e2b40, new_msg=new_msg@entry=false) at /home/zhyan/Ceph/ceph-2/src/mds/MDSRank.cc:544
#12 0x00005555557c59ba in MDSRank::retry_dispatch (this=0x55555f04a000, m=<optimized out>) at /home/zhyan/Ceph/ceph-2/src/mds/MDSRank.cc:979
#13 0x0000555555a6879a in Context::complete (r=0, this=0x55555f37f3e0) at /home/zhyan/Ceph/ceph-2/src/include/Context.h:70
#14 MDSInternalContextBase::complete (this=0x55555f37f3e0, r=0) at /home/zhyan/Ceph/ceph-2/src/mds/MDSContext.cc:30
#15 0x00005555557c4154 in MDSRank::_advance_queues (this=this@entry=0x55555f04a000) at /home/zhyan/Ceph/ceph-2/src/mds/MDSRank.cc:769
#16 0x00005555557c4aa8 in MDSRank::_dispatch (this=this@entry=0x55555f04a000, m=m@entry=0x555560692900, new_msg=new_msg@entry=true) at /home/zhyan/Ceph/ceph-2/src/mds/MDSRank.cc:556
#17 0x00005555557c598d in MDSRankDispatcher::ms_dispatch (this=0x55555f04a000, m=m@entry=0x555560692900) at /home/zhyan/Ceph/ceph-2/src/mds/MDSRank.cc:523
#18 0x00005555557ae843 in MDSDaemon::ms_dispatch (this=0x55555edbca00, m=0x555560692900) at /home/zhyan/Ceph/ceph-2/src/mds/MDSDaemon.cc:1135
#19 0x0000555555e69cf1 in Messenger::ms_deliver_dispatch (m=0x555560692900, this=0x55555ef24000) at /home/zhyan/Ceph/ceph-2/src/msg/Messenger.h:668
#20 DispatchQueue::entry (this=0x55555ef24180) at /home/zhyan/Ceph/ceph-2/src/msg/DispatchQueue.cc:197
#21 0x0000555555bbcf8d in DispatchQueue::DispatchThread::entry (this=<optimized out>) at /home/zhyan/Ceph/ceph-2/src/msg/DispatchQueue.h:101
#22 0x00007ffff60ea36d in start_thread (arg=0x7ffff0b95700) at pthread_create.c:456
#23 0x00007ffff513ee1f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:97
Related issues
History
#1 Updated by Zheng Yan about 5 years ago
- Status changed from New to Fix Under Review
#2 Updated by Patrick Donnelly about 5 years ago
- Status changed from Fix Under Review to Pending Backport
- Assignee set to Zheng Yan
- Source set to Development
- Backport set to luminous,jewel
#3 Updated by Zheng Yan about 5 years ago
#4 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22379: luminous: client reconnect gather race added
#5 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22380: jewel: client reconnect gather race added
#6 Updated by Yuri Weinstein about 5 years ago
#7 Updated by Nathan Cutler almost 5 years ago
- Status changed from Pending Backport to Resolved