mds: handle client reconnect gather race

Fixes: http://tracker.ceph.com/issues/22263
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
(cherry picked from commit e4ecf26a8ef622f8290129a682afb1c64b3e7e00)

Conflicts:
    src/mds/Server.cc: need to remove 'reconnect_evicting', otherwise compilation fails